[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "midsv"
version = "0.12.1"
description = "Python module to convert SAM to MIDSV format."
authors = ["Akihiro Kuno <akuno@md.tsukuba.ac.jp>"]
homepage = "https://github.com/akikuno/midsv"
repository = "https://github.com/akikuno/midsv"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.ruff]
lint.select = ["E", "F", "W", "I", "Q"]
line-length = 119
